--- a/generate-report.html
+++ b/generate-report.html
@@ -250,7 +250,7 @@
 				
 				$('#logout').click(function(){
 					localStorage.removeItem('userlog');
-					location.href="index.html";
+					location.href="login.html";
 				});
 				
 				var query="";
