--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
 					<div class="col-md-4 col-xs-6" id="manageclass">
 						<div class="wrapcol">
 							<div class="colglyphs">
-								<span class="glyphicon glyphicon-list-alt"></span>
+								<span class="glyphicon glyphicon-list-alt" style="width: 50%"></span>
 							</div>
 							<h2 class="menuheader">Manage Classes</h2>
 							<hr/>
@@ -41,7 +41,7 @@
 					<div class="col-md-4 col-xs-6" id="takeattendance">
 						<div class="wrapcol">
 							<div class="colglyphs">
-								<span class="glyphicon glyphicon-check"></span>
+								<span class="glyphicon glyphicon-check" style="width: 50%"></span>
 							</div>
 							<h2 class="menuheader">Take attendance</h2>
 							<hr/>
@@ -52,7 +52,7 @@
 					<div class="col-md-4 col-xs-12" id="generatereport"style="margin-bottom: 75px;">
 						<div class="wrapcol">
 							<div class="colglyphs">
-								<span class="glyphicon glyphicon-file"></span>
+								<span class="glyphicon glyphicon-file" style="width: 50%"></span>
 							</div>
 							<h2 class="menuheader">Generate Report</h2>
 							<hr/>
