--- a/studentpage.html
+++ b/studentpage.html
@@ -279,7 +279,7 @@
 				$('#logout').click(function(){
 					localStorage.removeItem('userlog');
 					event.preventDefault();
-					newLocation = 'index.html';
+					newLocation = 'login.html';
 					$('body').fadeOut(500, newpage);
 				});
 				
