--- a/index.html
+++ b/index.html
@@ -11,79 +11,70 @@
 	<link href="css/default.css" rel="stylesheet">
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<style>
+		#wrapper{
+			background: linear-gradient(#275670, #122B41);
+			background: -moz-linear-gradient(#275670, #122B41);
+			background: -webkit-linear-gradient(#275670, #122B41);
+			background: -o-linear-gradient(#275670, #122B41);
+			background: -ms-linear-gradient(#275670, #122B41);
+			height:100%;
+		    width: 100%;
+		    margin: 0;
+		    padding: 0;
+		    border: 0;
+		}
+		#wrapper td {
+		   vertical-align: middle;
+		   text-align: center;
+		}
+	</style>
 	<script>
-		$(document).ready(function(){
-			
 		function newpage() {
 			window.location = newLocation;
 		}
-		$("#btnLogin").click(function(){
-
-			var txtUsername = $("#txtUsername").val();
-			var txtPassword = $("#txtPassword").val();
-
-			if( txtUsername =='' || txtPassword =='')
+	
+		function countdown(secs) {
+			if (secs == 5){
+				clearTimeout(timer);
+				if(localStorage.getItem("userlog")!==null)
 				{
-				  alert("Please fill all fields....");
-				}	
-			
-			else 
-			   {
-					$.ajax({
-						type: 'GET',
-						url: 'http://gordoncollegeccs.edu.ph/appttendance/login.php',
-						dataType: 'html',
-						data: $('#frmLogin').serialize(),
-						success: function(data){
-							if(data=='admin'){
-								localStorage.setItem('userlog', $('#txtUsername').val());
-								username = localStorage.getItem('userappttendance');
-								event.preventDefault();
-								newLocation = 'adminpage.html';
-								$('body').fadeOut(500, newpage);
-							}
-							else if(data=='staff'){
-								localStorage.setItem('userlog', $('#txtUsername').val());
-								username = localStorage.getItem('userappttendance');
-								event.preventDefault();
-								newLocation = 'menu.html';
-								$('body').fadeOut(500, newpage);
-							}
-							else if(data=='student'){
-								localStorage.setItem('userlog', $('#txtUsername').val());
-								username = localStorage.getItem('userappttendance');
-								event.preventDefault();
-								newLocation = 'studentpage.html';
-								$('body').fadeOut(500, newpage);
-							}
-							else{
-								$('#txtUsername').text('');
-								$('#txtPassword').text('');
-								$('#txtError').text('Invalid username or password.');
-							}
-						}
-					});
-			   }
-			
-			});
-		});
+					var user = localStorage.getItem('user');
+					if(user == 'admin')
+					{
+						newLocation = 'adminpage.html';
+						$('body').fadeOut(500, newpage);
+					}
+					else if(user == 'student')
+					{
+						newLocation = 'studentpage.html';
+						$('body').fadeOut(500, newpage);
+					}
+					else
+					{
+						newLocation = 'menu.html';
+						$('body').fadeOut(500, newpage);
+					}
+				}
+				else
+				{	
+					window.location = "login.html";
+				}
+			}
+				secs--;
+				var timer = setTimeout('countdown('+secs+')', 1000);
+			}
+				
+		window.addEventListener("load", countdown(10), false);
+		
 	</script>
   </head>
 
  <body id="bodyIndex">
-	<div class="container" id="pageLogin">
-		<img src="images/logoccs.png" class="img-responsive" id="imglogo"/>
-		<h2 id ="frmHeader" class="text-center">GC CCS<br>Online Attendance Tracker</h2>
-		<h4 class="text-center"><i>Manage student details, manage classes, generate report</i></h4>
-		<hr/>
-		<form id="frmLogin">
-			<div class="form">
-				<input type="text" placeholder="username" class="form-control" id="txtUsername" name="txtUsername">
-				<input type="password" placeholder="password" class="form-control" id="txtPassword" name="txtPassword">
-			</div>
-		</form>
-		<button class="btn btn-primary form-control" id="btnLogin">Login</button>
-		<p id="txtError" class="text-danger"></p>
-	</div>
+	<table id="wrapper">
+		<tr>
+			<td><img src="images/logo.png" alt="" / style="width: 25%;"></td>
+		</tr>
+	</table>
   </body>
 </html>
