--- a/manage-students.html
+++ b/manage-students.html
@@ -216,7 +216,7 @@
 				
 				$('#logout').click(function(){
 					localStorage.removeItem('userlog');
-					location.href="index.html";
+					location.href="login.html";
 				});
 				
 				$('#classtoadd').hide();
