--- a/adminpage.html
+++ b/adminpage.html
@@ -366,7 +366,7 @@
 	</head>
 	
 	<body>
-			<div class="container icon-menu" id="banner">		
+			<div class="container icon-menu navbar-fixed-top" id="banner">		
 					<span class="glyphicon glyphicon-th-list menu-glyph"></span><p class="text-center" style="margin-top: -23px;">&nbsp&nbsp Appttendance</p>
 				<div class="menu">
 					<!-- Menu -->
