--- a/adminpage.html
+++ b/adminpage.html
@@ -366,15 +366,17 @@
 	</head>
 	
 	<body>
-			<div class="container icon-menu navbar-fixed-top" id="banner">		
-					<span class="glyphicon glyphicon-th-list menu-glyph"></span><p class="text-center" style="margin-top: -23px;">&nbsp&nbsp Appttendance</p>
-				<div class="menu">
-					<!-- Menu -->
-					<ul>
-						<li id="logout"><span class="glyphicon glyphicon-log-out menu-glyph"></span> Log out</li>
-					</ul>
+			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+				<div class="container icon-menu" id="banner">		
+						<span class="glyphicon glyphicon-th-list menu-glyph"></span><p class="text-center" style="margin-top: -23px;">&nbsp&nbsp Appttendance</p>
+					<div class="menu">
+						<!-- Menu -->
+						<ul>
+							<li id="logout"><span class="glyphicon glyphicon-log-out menu-glyph"></span> Log out</li>
+						</ul>
+					</div>
 				</div>
-			</div>
+			</nav>
 			
 			<div class="container" id="studentHeader">
 				<div class="row wrapdiv">
