Fixed navbar bugs

--- a/studentpage.html
+++ b/studentpage.html
@@ -364,15 +364,17 @@
 	</head>
 	
 	<body>
-			<div class="container icon-menu" id="banner">		
-					<span class="glyphicon glyphicon-th-list menu-glyph"></span><p class="text-center" style="margin-top: -23px;">&nbsp&nbsp Appttendance</p>
-				<div class="menu">
-					<!-- Menu -->
-					<ul>
-						<li id="logout"><span class="glyphicon glyphicon-log-out menu-glyph"></span> Log out</li>
-					</ul>
+			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+				<div class="container icon-menu" id="banner">		
+						<span class="glyphicon glyphicon-th-list menu-glyph"></span><p class="text-center" style="margin-top: -23px;">&nbsp&nbsp Appttendance</p>
+					<div class="menu">
+						<!-- Menu -->
+						<ul>
+							<li id="logout"><span class="glyphicon glyphicon-log-out menu-glyph"></span> Log out</li>
+						</ul>
+					</div>
 				</div>
-			</div>
+			</nav>
 			
 			<div class="container" id="studentHeader">
 				<div class="row wrapdiv">
@@ -385,7 +387,7 @@
 			
 			<div class="container" id="studentList">
 				<div class="row">
-					<div class="col-md-7" id="displayStudents">
+					<div class="col-md-7" id="displayStudents" style="margin-top: 60px;">
 						<div class="wrapdiv">
 							<h3 class="titleCol">Personal Information<button class="btn pull-right" data-toggle="modal" data-target="#editModal" id="btnEdit"><span class="glyphicon glyphicon-pencil smallglyph"></button></h3>
 							<div id="displayinfo">
