--- a/manage-class.html
+++ b/manage-class.html
@@ -413,19 +413,21 @@
 	</head>
 	
 	<body>
-			<div class="container icon-menu" id="banner">		
-					<span class="glyphicon glyphicon-th-list menu-glyph"></span><p class="text-center" style="margin-top: -23px;">&nbsp&nbsp Appttendance</p>
-				<div class="menu">
-					<!-- Menu -->
-					<ul>
-						<li id="home"><span class="glyphicon glyphicon-home menu-glyph"></span> Home</li>
-						<li id="manageclass"><span class="glyphicon glyphicon-list-alt menu-glyph" ></span> Manage Class</li>
-						<li id="takeattendance"><span class="glyphicon glyphicon-check menu-glyph"></span> Take attendance</li>
-						<li id="genearatereport"><span class="glyphicon glyphicon-file menu-glyph"></span> Generate Report</li>
-						<li id="logout"><span class="glyphicon glyphicon-log-out menu-glyph"></span> Log out</li>
-					</ul>
+			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+				<div class="container icon-menu" id="banner">		
+						<span class="glyphicon glyphicon-th-list menu-glyph"></span><p class="text-center" style="margin-top: -23px;">&nbsp&nbsp Appttendance</p>
+					<div class="menu">
+						<!-- Menu -->
+						<ul>
+							<li id="home"><span class="glyphicon glyphicon-home menu-glyph"></span> Home</li>
+							<li id="manageclass"><span class="glyphicon glyphicon-list-alt menu-glyph" ></span> Manage Class</li>
+							<li id="takeattendance"><span class="glyphicon glyphicon-check menu-glyph"></span> Take attendance</li>
+							<li id="genearatereport"><span class="glyphicon glyphicon-file menu-glyph"></span> Generate Report</li>
+							<li id="logout"><span class="glyphicon glyphicon-log-out menu-glyph"></span> Log out</li>
+						</ul>
+					</div>
 				</div>
-			</div>
+			</nav>
 			
 			<div class="container" id="studentHeader">
 				<div class="row wrapdiv">
