--- a/take-attendance.html
+++ b/take-attendance.html
@@ -358,7 +358,7 @@
 						</ul>
 					</div>
 				</div>
-			</div>
+			</nav>
 			
 			<div class="container" id="studentHeader">
 				<div class="row wrapdiv">
