--- a/adminpage.html
+++ b/adminpage.html
@@ -14,6 +14,7 @@
 		<script src="js/main.js"></script>
 		<script type="text/javascript" language="javascript" src="js/jquery.dataTables.js"></script>
 		<style>
+			<!--------------><!------------ssd-->
 			#wrapper{
 			  left: 0;
 			  margin: 0;
