--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
 							<div class="colglyphs">
 								<span class="glyphicon glyphicon-check" style="width: 50%"></span>
 							</div>
-							<h2 class="menuheader">Take attendance</h2>
+							<h2 class="menuheader">Check attendance</h2>
 							<hr/>
 							<div class="divinfo"><h4 class="text-center">Check student status in class. Students are can be marked as absent, present or tardy.</h4></div>
 						</div>
