--- a/manage-students.html
+++ b/manage-students.html
@@ -351,7 +351,7 @@
 							<li id="home"><span class="glyphicon glyphicon-home menu-glyph"></span> Home</li>
 							<li id="managestudents"><span class="glyphicon glyphicon-user menu-glyph"></span> Manage Students</li>
 							<li id="manageclass"><span class="glyphicon glyphicon-list-alt menu-glyph" ></span> Manage Class</li>
-							<li id="takeattendance"><span class="glyphicon glyphicon-check menu-glyph"></span> Check attendance</li>
+							<li id="takeattendance"><span class="glyphicon glyphicon-check menu-glyph"></span> Take attendance</li>
 							<li id="genearatereport"><span class="glyphicon glyphicon-file menu-glyph"></span> Generate Report</li>
 							<li id="logout"><span class="glyphicon glyphicon-log-out menu-glyph"></span> Log out</li>
 						</ul>
