--- a/adminpage.html
+++ b/adminpage.html
@@ -234,7 +234,7 @@
 				msg2.removeClass('alert alert-danger');
 				msg2.addClass('alert alert-info');
 				msg2.fadeIn(500).show();
-				$.getJSON("http://gordoncollegeccs.edu.ph/appttendance/displayaccounts.php", function(data)
+				$.getJSON("displayaccounts.php", function(data)
          		{
 					msg2.fadeOut(500).hide();
 					$.each(data, function(key, value) {
@@ -288,7 +288,7 @@
 					
 						$.ajax({
 							type:'POST',
-							url:'http://gordoncollegeccs.edu.ph/appttendance/addaccount.php',
+							url:'addaccount.php',
 							dataType: "html",  
 							data: $('#frmAddStudent').serialize(),
 							success:function(data) {
@@ -309,7 +309,7 @@
 				$('#btnUpdate').click(function(){
 					$.ajax({
 						type:'POST',
-						url:'http://gordoncollegeccs.edu.ph/appttendance/editaccount.php',
+						url:'editaccount.php',
 						dataType: "html",  
 						data: $('#frmEdit').serialize(),
 						success:function(data) {
@@ -327,7 +327,7 @@
 					newPass = $('#txtnewPass').val();
 					$.ajax({
 						type:'POST',
-						url:'http://gordoncollegeccs.edu.ph/appttendance/editpassword.php',
+						url:'editpassword.php',
 						dataType: "html",  
 						data: {disId: id, txtnewPass: newPass},
 						success:function(data) {
@@ -343,7 +343,7 @@
 				$('#btnConfirmDelete').click(function(){
 					$.ajax({
 						type:'POST',
-						url:'http://gordoncollegeccs.edu.ph/appttendance/deleteaccount.php',
+						url:'deleteaccount.php',
 						dataType: "html",  
 						data: 'delete_id='+id,
 						success:function(data) {
@@ -517,5 +517,6 @@
 				<p><span class="glyphicon glyphicon-info-sign text-center" id="footerglyph"></span></p>
 				<h6 class="text-center" id="footerinfo">Old Hospital Road, East Tapinac, Olongapo City<br><span class="glyphicon glyphicon-phone" id="phone"></span> (047)224-6929<br><span class="glyphicon glyphicon-envelope" id="mail"></span> gordoncollegeccs.edu.ph</h6></h6>
 			</div>
+
 	</body>
 </html>
