--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 			   {
 					$.ajax({
 						type: 'GET',
-						url: 'login.php',
+						url: 'http://gordoncollegeccs.edu.ph/appttendance/login.php',
 						dataType: 'html',
 						data: $('#frmLogin').serialize(),
 						success: function(data){
