--- a/take-attendance.html
+++ b/take-attendance.html
@@ -233,7 +233,7 @@
 				bottom: 8em ; 
 				right : 2em ;
 				text-decoration: none;
-				color: white;
+				color: black;
 				
 				font-size: 12px;
 				padding: 1em;
@@ -341,6 +341,7 @@
 				$('#classtoadd').change(function(){
 					arrName = [];
 					arrAttendance = [];
+					arrName1 = [];
 					table
 							.clear()
 							.draw();
