Update menu page

--- a/menu.html
+++ b/menu.html
@@ -49,12 +49,23 @@
 						</div>
 					</div>
 					
-					<div class="col-md-4 col-xs-12" id="generatereport"style="margin-bottom: 75px;">
+					<div class="col-md-4 col-xs-6" id="generatereport"style="margin-bottom: 75px;">
 						<div class="wrapcol">
 							<div class="colglyphs">
 								<span class="glyphicon glyphicon-file" style="width: 50%"></span>
 							</div>
 							<h2 class="menuheader">Generate Report</h2>
+							<hr/>
+							<div class="divinfo"><h4 class="text-center">Export recorded attendance into csv by student, by class or by a specified date range. </h4></div>
+						</div>
+					</div>
+					
+					<div class="col-md-4 col-xs-6" id="logout"style="margin-bottom: 75px;">
+						<div class="wrapcol">
+							<div class="colglyphs">
+								<span class="glyphicon glyphicon-file" style="width: 50%"></span>
+							</div>
+							<h2 class="menuheader">Log out</h2>
 							<hr/>
 							<div class="divinfo"><h4 class="text-center">Export recorded attendance into csv by student, by class or by a specified date range. </h4></div>
 						</div>
