--- a/studentpage.html
+++ b/studentpage.html
@@ -264,6 +264,24 @@
 				$('body').css('display', 'none');
 				$('body').fadeIn(500);
 			
+				if(localStorage.getItem("user")!==null)
+				{
+					if(localStorage.getItem("user")=='student')
+					{
+					
+					}
+					else
+					{
+						alert('Session has expired. Please log in first.');
+						window.location = "login.html";
+					}
+				}
+				else
+				{	
+					alert('Session has expired. Please log in first.');
+					window.location = "login.html";
+				}
+			
 				$('.icon-menu').click(function() {
 					$('.menu').toggle(function(){
 						$('.menu').animate({
@@ -277,6 +295,7 @@
 				}
 				
 				$('#logout').click(function(){
+					localStorage.removeItem('user');
 					localStorage.removeItem('userlog');
 					event.preventDefault();
 					newLocation = 'login.html';
