Remove edit account

--- a/take-attendance.html
+++ b/take-attendance.html
@@ -329,6 +329,7 @@
 				
 				$('#logout').click(function(){
 					localStorage.removeItem('userlog');
+					localStorage.removeItem('uid');
 					event.preventDefault();
 					newLocation = 'login.html';
 					$('body').fadeOut(500, newpage);
